<?xml version="1.0"?>
<package format="3">
    <name>ris</name>
    <version>0.0.1</version>
    <description>
        Template project for AIS4104 "Robotics and Intelligent Systems with Project"
    </description>

    <author email="aleksander.skrede@ntnu.com">Aleksander Skrede</author>
    <maintainer email="aleksander.skrede@ntnu.com">Aleksander Skrede</maintainer>

    <license>BSD</license>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>ris_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
