<?xml version="1.0"?>
<package format="3">
    <name>ris_msgs</name>
    <version>0.0.1</version>
    <description>
	    Template project for messages and services for AIS4104 Robotics and Intelligent Systems with Project.
    </description>

    <author email="aleksander.skrede@ntnu.com">Aleksander Skrede</author>
    <maintainer email="aleksander.skrede@ntnu.com">Aleksander Skrede</maintainer>

    <license>BSD</license>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>std_msgs</depend>
</package>
